<resources>
    <string name="app_name">RecyclingApp</string>
    <string name="camera_select_button">camera</string>
    <string name="home_select_button">home</string>
    <string name="search_select_button">search</string>
    <string name="recent_select_button">recents</string>
    <string name="loginButtontext">Login</string>
    <string name="skipButtonText">Skip</string>
    <string name="loginScreenDescription">Sustainable recycling for Columbus, OH</string>
    <string name="create_account_text">Create Account</string>
    <string name="home_screen_title">Columbus Recycle</string>
    <string name="home_user_info_placeholder">Welcome to the Columbus Recycle app! Learn about how to recycle food packaging by scanning the barcode!</string>
    <string name="home_username_placeholder">Login to see User Stats</string>
    <string name="num_items_scanned">Num Items Scanned:</string>
    <string name="home_websites_block_title">Columbus Recycling Page</string>
    <string name="scanned_item_name_placeholder">Item Name</string>
    <string name="recyclability_placeholder">Recyclability</string>
</resources>