<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/login_fragment">

        <ImageView
            android:layout_width="103dp"
            android:layout_height="108dp"
            android:src="@drawable/recycle"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN FRAGMENT"
            android:textSize="22sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/loginScreenDescription"
            android:textColor="@color/grey"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="12dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"
                android:background="@color/shade"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/usernameBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="Username" />

                <EditText
                    android:id="@+id/passwordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="Password" />

                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    android:background="@android:color/transparent"
                    android:textStyle="italic"
                    android:text="@string/create_account_text"/>

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginButtontext"
                android:backgroundTint="@color/green"/>

            <Button
                android:id="@+id/skipButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skipButtonText"
                android:backgroundTint="@color/green"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>