<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/item_display_fragment"
        android:orientation="vertical">

        <TextView
            android:background="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/home_screen_title"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/login_fragment"
            android:layout_margin="12dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/recycle"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanned_item_name_placeholder"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:layout_gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="2dp"
                android:background="@color/light_grey" />

    <!--        Item info-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"
                >


    <!--            Item info!-->

                <TextView
                    android:id="@+id/item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="Here is your item details..."/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/item_recyclable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/recyclability_placeholder"
                    android:layout_margin="12dp"
                    android:background="@color/shade"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/closeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:text="Close" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>